# tradetools

./: .eslintrc.cjs  .gitignore  .zshrc  README.md  build.js  codegen.wealthsimple.yml  devenv.bash  graphql.config.yml  initenv.bash  jest.config.js  nodemon.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  wsdir.bash
.github/workflows/: push.yml
src/: global.d.ts  tiChecker.ts  wealthsimple.graphql
src/cli/: account.ts  buy.ts  console.ts  login.ts  main.ts  program.ts  sell.ts  trades.ts  utils.ts
src/graphqlQueries/: activities.graphql  portfolio.graphql  quote.graphql
src/render/: account.ts  cells.ts  trade.ts
src/tax/: calculation.ts
src/tools/: tax.ts  ws-download-trade-activities.ts  yahoo-upload-trading-activities.ts
src/types/: auth.ts  cliOptions.ts  wealthsimple.ts  yahoo.ts
src/utils/: promise.ts
src/wealthsimple/: WeathsimpleAPI.ts  auth.ts  portfolio.ts
tests/example-data/: WSFetchPositionsResponse.ts  account.ts
tests/example-data/wealthsimple/: orders.ts
tests/wealthsimple/: WealthsimpleAPI.test.ts  auth.test.ts
