[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = ["Yu Li <github@yuli.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
nodeenv = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
